@@ -113,6 +113,7 @@ const GenericMatrix& EpetraKrylovSolver::get_operator() const
 dolfin::uint EpetraKrylovSolver::solve(GenericVector& x,
                                        const GenericVector& b)
 {
+  check_dimensions(get_operator(), x, b);
   return solve(x.down_cast<EpetraVector>(), b.down_cast<EpetraVector>());
 }
 //-----------------------------------------------------------------------------
@@ -192,6 +193,7 @@ dolfin::uint EpetraKrylovSolver::solve(EpetraVector& x, const EpetraVector& b)
 dolfin::uint EpetraKrylovSolver::solve(const GenericMatrix& A, GenericVector& x,
                                        const GenericVector& b)
 {
+  check_dimensions(A, x, b);
   return solve(A.down_cast<EpetraMatrix>(), x.down_cast<EpetraVector>(),
                b.down_cast<EpetraVector>());
 }
